--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,7 @@ body {
 #nav {
   width: 100%;
   height: 117px;
+
 }
 
 #navigation {
@@ -176,8 +177,7 @@ a:hover {
 .indexfooter {
   text-decoration: none;
   color: black;
-
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 .indexfooter:hover {
   color: #daa520;
@@ -702,3 +702,8 @@ a.pfont:hover {
 }
 
 /********* END HERO CONTENT*******/
+.footer-payment{
+    height: 1.5rem;
+    width: auto;
+}
+
