start the page product and single product, done also the name on login

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,10 @@
 // Body
 $body-bg: #f8fafc;
 $bg-theme: #f1f1f1;
+$pagination-active-border-color: #6c757d;
+$pagination-hover-border-color: #6c757d;
+$pagination-active-bg:#6c757d;
+$link-color:#6c757d;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
