--- a/public/css/style.css
+++ b/public/css/style.css
@@ -567,6 +567,7 @@ a.pfont:hover {
   background-color: transparent;
   max-width: 300px;
   height: 300px;
+    margin:auto;
 
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
