create the searchbar for all product in the frontpage all done

--- a/resources/sass/frontend/single-product.scss
+++ b/resources/sass/frontend/single-product.scss
@@ -1,3 +1,10 @@
-.pagination{
-    color:#6c757d;
+.pagination {
+    color: #6c757d;
+}
+
+ul {
+    list-style-type: none;
+    li {
+        text-decoration: none;
+    }
 }
