create the livewire the product and the serach all on top from the site, create the categories on the backend for new product

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -725,3 +725,10 @@ a.pfont:hover {
     max-width: 300px;
     margin: auto;
 }
+/****************************/
+
+.category-image {
+    position: absolute;
+    bottom: -5px;
+    right: 16px;
+}
