--- a/resources/sass/admin/_start-bootstrap.scss
+++ b/resources/sass/admin/_start-bootstrap.scss
@@ -1,4 +1,5 @@
-.sb-nav-fixed #layoutSidenav #layoutSidenav_nav, .sb-nav-fixed .sb-topnav {
+.sb-nav-fixed #layoutSidenav #layoutSidenav_nav,
+.sb-nav-fixed .sb-topnav {
     position: fixed;
     top: 0;
     right: 0;
@@ -171,7 +172,11 @@ body {
     margin-left: auto;
     transition: transform 0.15s ease;
 }
-.sb-sidenav .sb-sidenav-menu .nav .nav-link.collapsed .sb-sidenav-collapse-arrow {
+.sb-sidenav
+    .sb-sidenav-menu
+    .nav
+    .nav-link.collapsed
+    .sb-sidenav-collapse-arrow {
     transform: rotate(-90deg);
 }
 .sb-sidenav .sb-sidenav-menu .nav .sb-sidenav-menu-nested {
@@ -405,4 +410,10 @@ body {
     width: 20px !important;
     font-size: 0.75rem;
     border-radius: 0.375rem !important;
+}
+.dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    display: inline-block;
 }
